[package]
name = "push-relay"
description = "This server accepts push requests via HTTP and notifies FCM/APNs push services."
version = "4.2.2"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/threema-ch/push-relay"
edition = "2021"

[dependencies]
a2 = "0.8"
aead = "0.5"
base64 = "0.21.5"
chrono = "0.4"
clap = { version = "4.4.7", features = ["std", "derive", "suggestions", "color", "help"], default-features = false }
crypto_secretbox = "0.1"
data-encoding = "2.4"
env_logger = "0.10"
form_urlencoded = "1"
futures = "0.3"
hostname = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["server", "client", "http1", "http2", "runtime", "stream"], default-features = false }
hyper-rustls = "0.24"
lazy_static = "1.3"
log = "0.4"
salsa20 = { version = "0.10", features = ["zeroize"] }
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"
thiserror = "1"
toml = "0.8.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], default-features = false }
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "zeroize"] }
zeroize = "1.6"

[dev-dependencies]
mockito = "0.31"
argparse = "*"
openssl = "*"
