[package]
name = "push-relay"
description = "This server accepts push requests via HTTP and notifies FCM/APNs push services."
version = "5.0.1"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/threema-ch/push-relay"
edition = "2021"

[dependencies]
a2 = { version = "0.10", features = ["tracing"] }
aead = "0.5"
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["http1", "http2", "tokio"], default-features = false }
base64 = "0.22.0"
chrono = "0.4"
clap = { version = "4.4.7", features = ["std", "derive", "suggestions", "color", "help"], default-features = false }
crypto_secretbox = "0.1"
data-encoding = "2.4"
form_urlencoded = "1"
futures = "0.3"
hostname = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["rustls-tls-native-roots", "http2"], default-features = false }
salsa20 = { version = "0.10", features = ["zeroize"] }
serde = "1.0.27"
serde_json = "1.0.10"
thiserror = "1"
toml = "0.8.6"
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5", features = ["trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "env-filter"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "zeroize"] }
yup-oauth2 = "8.3.0"
zeroize = "1.6"

[dev-dependencies]
argparse = "*"
openssl = "*"
wiremock = "0.6.0"
