[package]
name = "push-relay"
description = "This server accepts push requests via HTTP and notifies FCM/APNs push services."
version = "6.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/threema-ch/push-relay"
edition = "2024"

[dependencies]
apns-h2 = { version = "0.11.0", features = ["tracing", "aws-lc-rs"], default-features = false }
aead = "0.5"
anyhow = "1.0.81"
axum = { version = "0.8.1", features = ["http1", "http2", "tokio"], default-features = false }
base64 = "0.22.0"
chrono = "0.4"
clap = { version = "4.4.7", features = ["std", "derive", "suggestions", "color", "help"], default-features = false }
crypto_secretbox = "0.1"
data-encoding = "2.4"
form_urlencoded = "1"
futures = "0.3"
hostname = "0.4.0"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["hickory-dns", "http2", "rustls", "rustls-native-certs", "system-proxy"], default-features = false }
salsa20 = { version = "0.10", features = ["zeroize"] }
serde = "1.0.27"
serde_json = "1.0.10"
thiserror = "2.0.11"
toml = "0.9.2"
tower = { version = "0.5.2", features = ["util"], default-features = false }
tower-http = { version = "0.6.2", features = ["trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "env-filter"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "zeroize"] }
yup-oauth2 = { version = "12.1.0", features = ["hyper-rustls", "aws-lc-rs", "service-account"], default-features = false }
zeroize = "1.6"

[dev-dependencies]
argparse = "*"
p256 = "0.13.2"
pkcs8 = "0.10.2"
wiremock = "0.6.0"
